Fixat så att man inte loggas ut förrän man klickar på logout. Börjat med testView för att wrappa ett test. Börjat på teacherView

--- a/css/main.css
+++ b/css/main.css
@@ -105,7 +105,7 @@ label{
   border: 0px solid grey;
   
 }
-.choise-question .question >h3,p {
+.choise-question .question >h3 {
 	background-color: #ededed;
 	padding: 10px 10px;
 	margin: 0px 20px;
